[package]
name = "titanic-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.29.0", features = ["lazy", "describe", "ndarray"] }
smartcore = { version = "0.3.2", features = ["ndarray-bindings"] }
ndarray = "0.15.6"
